--- a/examples/middleware/cors/assets/index.html
+++ b/examples/middleware/cors/assets/index.html
@@ -49,14 +49,14 @@
   <div class="section">
     <h2>GET /simple</h2>
     <button onclick="getSimple()">Send GET</button>
-	<p>Will not require a pre-flight request due to being a simple method.</p>
+    <p>Will not require a pre-flight request due to being a simple method.</p>
     <textarea id="response-get-simple" readonly></textarea>
   </div>
 
   <div class="section">
     <h2>POST /simple</h2>
     <input type="text" id="postSimpleMessage" placeholder="Enter message..."/>
-	<p>Will not require a pre-flight request since this is a simple method with a simple content type (<code>text/plain</code>).</p>
+    <p>Will not require a pre-flight request since this is a simple method with a simple content type (<code>text/plain</code>).</p>
     <button onclick="postSimple()">Send POST</button>
     <textarea id="response-post-simple" readonly></textarea>
   </div>
@@ -64,7 +64,7 @@
   <div class="section">
     <h2>PATCH /update</h2>
     <button onclick="patchUpdate()">Send PATCH</button>
-	<p>Will require a pre-flight request which will be blocked due to the CORS config not accepting <code>PATCH</code> requests.</p>
+    <p>Will require a pre-flight request which will be blocked due to the CORS config not accepting <code>PATCH</code> requests.</p>
     <textarea id="response-patch-update" readonly></textarea>
   </div>
 
@@ -73,14 +73,14 @@
     <input type="text" id="createName" placeholder="Name"/>
     <input type="text" id="createAge" placeholder="Age"/>
     <button onclick="postCreate()">Send POST</button>
-	<p>Will require a pre-flight request due to the request requiring a non-simple content type (<code>application/json</code>).</p>
+    <p>Will require a pre-flight request due to the request requiring a non-simple content type (<code>application/json</code>).</p>
     <textarea id="response-post-create" readonly></textarea>
   </div>
 
   <div class="section">
     <h2>DELETE /remove</h2>
     <button onclick="deleteRemove()">Send DELETE</button>
-	<p>Will require a pre-flight request which will be accepted.</p>
+    <p>Will require a pre-flight request which will be accepted.</p>
     <textarea id="response-delete-remove" readonly></textarea>
   </div>
 
@@ -91,7 +91,8 @@
       try {
         const res = await promise;
         const text = await res.text();
-        responseEl.value = `Status: ${res.status}\n${text}`;
+        const customHeader = res.headers.get("X-Response-Header");
+        responseEl.value = `Status: ${res.status}\n\nBody:\n${text}\n\nX-Response-Header: ${customHeader ?? "null (not exposed or not present)"}`;
       } catch (err) {
         responseEl.value = `Error: ${err.message}`;
       }
