`/login` and `/register` -> `/auth/login`, `/auth/register`

--- a/examples/todo/static/html/register.html
+++ b/examples/todo/static/html/register.html
@@ -33,7 +33,7 @@
       const password = document.getElementById('password').value;
       const confirmPassword = document.getElementById('confirmPassword').value;
 
-      const res = await fetch('http://localhost:8080/register', {
+      const res = await fetch('http://localhost:8080/auth/register', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ name, email, password, confirm_password: confirmPassword })
