--- a/examples/todo/static/html/index.html
+++ b/examples/todo/static/html/index.html
@@ -86,6 +86,10 @@
         const card = document.createElement("div");
         card.className = "list-card";
 
+        card.addEventListener("click", () => {
+          window.location.href = `/lists/${list.id}`;
+        });
+
         let itemsMarkup = "";
         if (list.items && list.items.length > 0) {
           let itemsToShow = [...list.items];
